--- a/composer.json
+++ b/composer.json
@@ -23,16 +23,18 @@
     "cs-fix": "php-cs-fixer fix"
   },
   "require": {
-    "php": "^7.1",
-    "kriswallsmith/buzz": "^0.17.1",
+    "php": ">=7.4",
+    "kriswallsmith/buzz": "^1.2",
     "symfony/dom-crawler": "^4.2@dev",
-    "symfony/css-selector": "^4.1"
+    "symfony/css-selector": "^4.1",
+    "psr/http-factory": "^1.0",
+    "nyholm/psr7": "^1.4"
   },
   "require-dev": {
-    "phpspec/phpspec": "^5.0",
-    "phpunit/phpunit": "^7.3",
+    "phpspec/phpspec": "7.1.x-dev",
+    "phpunit/phpunit": "^9.0",
     "beberlei/assert": "^3.0",
-    "phpstan/phpstan": "^0.10.5",
+    "phpstan/phpstan": "^1.0",
     "friendsofphp/php-cs-fixer": "^2.13"
   }
 }
