--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
   "require": {
     "php": ">=7.4",
     "kriswallsmith/buzz": "^1.2",
-    "symfony/dom-crawler": "^4.2@dev",
+    "symfony/dom-crawler": "^5.4",
     "symfony/css-selector": "^4.1",
     "psr/http-factory": "^1.0",
     "nyholm/psr7": "^1.4"
